<resources>
    <string name="app_name">pothole_protector</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="sign_in">Sign In</string>
    <string name="logo">logo</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_up">Don\'t have an account? Sign up</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="register">Register</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_bluetooth">BluetoothActivity</string>
    <string name="connect_to_pi">connect to pi</string>
    <string name="channel_name">POTHOLE PROTECTOR</string>
    <string name="channel_description">Notify when a pothole is detected</string>
    <string name="map">Map</string>
    <string name="manual_submission">Manual submission</string>
    <string name="settings">Settings</string>
    <string name="tpp">TPP</string>
    <string name="get_location">Get location</string>
    <string name="take_picture">Take Picture</string>
    <string name="report_manually">Report Manually</string>
    <string name="current_user">Current User: </string>
    <string name="sign_out">Sign Out</string>
</resources>