<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.Material3.Light"
    android:background="@color/beige"
    tools:context=".LoginActivity">

    <androidx.fragment.app.FragmentContainerView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:translationZ="2dp"
        android:id="@+id/create_user_fragment_container_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingRight="20dp"
    android:paddingLeft="20dp">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        android:adjustViewBounds="true"/>


    <EditText
        android:id="@+id/username_field"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:hint="@string/username"
        android:imeOptions="actionSend"
        />

    <EditText
        android:id="@+id/password_field"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:imeOptions="actionSend"
        />
    <Button
        android:id="@+id/sign_in"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/sign_in"
        />
    <TextView
        android:id="@+id/sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"/>
</LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>