<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/beige"
    android:theme="@style/Theme.AppCompat.Light"
    tools:context=".ManualDetectionFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:orientation="vertical"
        android:paddingRight="20dp"
        android:paddingLeft="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/report_manually"
            android:textColor="@color/white"
            android:fontFamily="oswald"
            android:layout_gravity="center_horizontal"
            android:textSize="24sp"/>

        <Button
        android:id="@+id/getLocation"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/get_location"
        />

        <Button
        android:id="@+id/pothole_picture"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/take_picture"
        />
    </LinearLayout>
</FrameLayout>